# altimetrik-rag

./: .gitignore  README.md  deploy.sh  docker-compose.yml  pyproject.toml  run_rag.py  run_retrieval.py  settings.py
api/data_processing/: template.yaml
api/data_processing/.aws-sam/: build.toml
api/data_processing/handler/: app.py
application/preprocessing/: __init__.py  chunking_data_handlers.py  chunking_handler.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
application/preprocessing/operations/: __init__.py  chunking.py
application/rag/: query_expanison.py  self_query.py
configs/: data_etl.yaml
domain/: __init__.py  chunks.py  cleaned_documents.py  embedded_chunks.py  types.py
domain/base/: nosql.py  vector.py
infrastructure/: inference_pipeline_api.py
infrastructure/db/: mongo.py  qdrant.py
interface/: streamlit_app.py
model/inference/: __init__.py  inference.py  test.py
pipelines/: data_etl.py  data_ingestion.py  export.py  inference.py  ingestion.py  retrieval.py
shared/: __init__.py
shared/domain/: __init__.py  chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  prompt.py  queries.py  types.py
shared/domain/base/: __init__.py  nosql.py  vector.py
shared/preprocessing/: __init__.py  chunking_data_handlers.py  chunking_handler.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
shared/preprocessing/operations/: __init__.py  chunk_tagging.py  chunking.py  cleaning.py  tagging.py
shared/utils/: misc.py
state_machines/: data_workflow.asl.json  ingestion_workflow.asl.json
steps/: base.py  inference_api.py  prompt_templates.py
steps/etl/: clean.py  download.py  extract.py  load.py  normalize.py  transform.py
steps/export/: serialize.py  to_json.py
steps/inference/: context.py  llm.py
steps/ingestion/: chunk_embed.py  clean.py  embedding.py  load_to_vector_db.py  query_data_warehouse.py
steps/retrieval/: intent_detection.py  query_expansion.py  reranking.py  retriever.py  self_query.py
tests/: run_rag.py
tools/: run.py
