[tool.poetry]
name = "zenml-etl"
version = "0.1.0"
description = "Standalone ZenML ETL pipeline"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "~3.11"
zenml = ">=0.68.1"
click = "^8.0.1"
loguru = "^0.7.2"
poethepoet = "0.29.0"
pandas = "^2.0.0"
pymongo = "^4.6.1"
qdrant-client = {extras = ["fastembed"], version = "^1.12.1"}
requests = "^2.31.0"
chardet = "^5.2.0"
pymupdf = "^1.24.13"
openai = "^1.53.0"
fastapi = "^0.115.4"
sentence-transformers = "^3.2.1"
transformers = "^4.46.1"
torch = "^2.5.1"
langchain-openai = "^0.2.5"
sagemaker = "^2.232.3"
kubernetes = "^31.0.0"
aws-profile-manager = "^0.7.3"
s3fs = "2024.2.0"

[tool.poe.tasks]
local-infrastructure-up = [
    "local-docker-infrastructure-up",
    "local-zenml-server-down",
    "local-zenml-server-up",
]
local-infrastructure-down = [
    "local-docker-infrastructure-down",
    "local-zenml-server-down",
]
local-docker-infrastructure-up = "docker compose up -d"
local-docker-infrastructure-down = "docker compose stop"
local-zenml-server-down = "poetry run zenml down"
local-zenml-server-up = "OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES poetry run zenml up"
set-local-stack = "poetry run zenml stack set default"
run-etl-pipeline = "poetry run python -m tools.run --run-etl"